[package]
name = "budae-jjigae"
version = "0.2.11"
edition = "2021"
#license = "AGPL-3.0-or-later"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
sonic-rs = "0.3.2"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
bytes = "1.5.0"
http-body-util = "0.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "std", "env-filter"] }
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
axum = { version = "0.7.4", features = ["http2"] }
tower = "0.4.13"
futures = "0.3.30"
sigh = { path = "../sigh" }
diesel = { version = "^2.1.4", features = ["postgres_backend"] }
diesel-async = { version = "^0.4.1", features = ["bb8", "postgres"] }
async-trait = "0.1.77"

mrf-policy = { path = "../modeum-sari" }
