[package]
name = "budae-jjigae"
version = "0.2.14"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
sonic-rs = "0.3.13"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.9", features = ["full"] }
bytes = "1.7.2"
http-body-util = "0.1.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "std", "env-filter"] }
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
axum = { version = "0.7.7", features = ["http2"] }
tower = "0.5.1"
futures = "0.3.31"
sigh = { path = "../sigh" }
diesel = { version = "^2.2.4", features = ["postgres_backend"] }
diesel-async = { version = "^0.5.0", features = ["bb8", "postgres"] }
async-trait = "0.1.83"

mrf-policy = { path = "../modeum-sari" }
