# SPDX-License-Identifier: CC0-1.0

[package]
name = "kitsune-mrf"
version = "0.1.0"
edition = "2021"
license = "AGPL-3"
publish = false

[dependencies]
slab = "0.4.9"
triomphe = "0.1.14"

wasmtime = { version = "25.0.1", default-features = false, features = [
    "addr2line",
    "async",
    "component-model",
    "cranelift",
    "parallel-compilation",
    "pooling-allocator",
    "runtime",
] }
wasmtime-wasi = { version = "25.0.1", default-features = false }
